September 2018 6.5
  - Password change possible via LDAP EXOP operation (set LDAP_EXOP as password hash)
  - Kolab updates
  - LAM Pro:
   -> Auto deletion of entries with dynamic directory services support (requires PHP 7.2).
  - Fixed bugs:
   -> Issue during uppercase login modification (#197)


20.06.2018 6.4
  - Imagick PHP extension required
  - Passwords can be checked against external service (e.g. https://api.pwnedpasswords.com/range)
  - Personal/Windows: image cropping support
  - Better filtering of account lists
  - Unix: Unix, Windows and group of names memberships can be synced in group selection
  - IMAP: create mailbox via file upload
  - PHP 7.2 support
  - Support for "," in DN
  - LAM Pro:
   -> Better support for 389ds password expiration
  - Fixed bugs:
   -> Error on password reset page when custom fields is used (194)

19.03.2018 6.3
  - Server profile: added option if referential integrity overlay is active to skip cleanup actions
  - Unix: several options are now specific to subaccount types (reconfiguration required!)
  - Fixed bugs:
   -> Security fixes (XSS vulnerabilities CVE-2018-8763 and CSRF token in URL CVE-2018-8764)
   -> Quota for Windows groups did not work
  - LAM Pro:
   -> Support custom structural object classes with new custom type
   -> Support dynamic lists
   -> Self service login and password self reset can be secured with captcha


04.02.2018 6.2.1
  - Fixed bugs:
   -> Login page not working when no server profile exists (44)
   -> LAM Pro: Password Self Reset has issues when both security question and confirmation mail are activated.
   -> LAM main configuration: certificate buttons do not work


13.12.2017 6.2
  - License changed from GPL v2 to GPL v3
  - PHP 5.6 and Internet Explorer 11 or later required
  - PDF export supports Chinese, Japan and Korean
  - Account status also shows expired accounts
  - Quota: support k/m/g/t/K/M/G/T to specify values in e.g. kB
  - LAM Pro: